tests/neg/semantic_cast_to_void_unsupported.baa
// EXPECT: التحويل الصريح إلى 'عدم' غير مدعوم حالياً

صحيح الرئيسية() {
    صحيح س = ٠.
    س = كـ<عدم>(١).
    إرجع س.
}
